upd package.json

--- a/package.json
+++ b/package.json
@@ -26,13 +26,13 @@
   },
   "license": "MIT",
   "dependencies": {
-    "grunt": "^1.0.3"
   },
   "scripts": {
     "build": "npm install && grunt",
     "start": "grunt watch"
   },
   "devDependencies": {
+    "grunt": "^1.0.3",
     "grunt-contrib-clean": "^2.0.0",
     "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-uglify": "^4.0.0",
