--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "grunt-contrib-uglify": "^4.0.0",
     "grunt-contrib-watch": "^1.1.0",
     "load-grunt-tasks": "^4.0.0",
+    "node-qunit-phantomjs": "^2.0.1",
     "qunit": "^2.8.0"
   }
 }
